objects/TAV4__Alignment__c.object
<CustomObject>
    <description>A group of sales areas, typically a group that handles a line of business which has it&apos;s own pool of sales reps.</description>
    <fields>
        <fullName>TAV4__Account_Lookup_Field__c</fullName>
        <formula>TAV4__Geo_Container__r.TAV4__Account_Lookup_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lookup Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Account_Sharing_Access__c</fullName>
        <description>The Account access assigned to Account sharing rules for territories in the alignment.</description>
        <inlineHelpText>The Account access assigned to Account sharing rules for territories in the alignment.</inlineHelpText>
        <label>Account Sharing Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAV4__Area_Count__c</fullName>
        <label>Area Count</label>
        <summaryForeignKey>TAV4__Sales_Area__c.TAV4__Alignment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TAV4__Assignable_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The alignment level that can have reps assigned to it</description>
        <label>Assignable Level</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a level from the alignment</errorMessage>
            <filterItems>
                <field>TAV4__Alignment_Level__c.TAV4__Alignment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TAV4__Alignment_Level__c</referenceTo>
        <relationshipLabel>Alignments</relationshipLabel>
        <relationshipName>Alignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Assignment_Priority__c</fullName>
        <defaultValue>9999</defaultValue>
        <description>Determines the order in which the alignment will be processed during auto-assignment processing.</description>
        <inlineHelpText>A value of 1 indicates the highest priority. Please make sure that you do not have duplicate priority values as the results will be indeterminate.</inlineHelpText>
        <label>Assignment Priority</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Auto_assign_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, an account may be assigned to this alignment during the auto-assignment processing.</description>
        <label>Auto-assign Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAV4__Auto_assign_Leads__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, a lead may be assigned to this alignment during the auto-assignment processing.</description>
        <label>Auto-assign Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAV4__Case_Sharing_Access__c</fullName>
        <description>The Case sharing level assigned to sharing rules for territories in the alignment.</description>
        <label>Case Sharing Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAV4__Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default owner of an unassigned territory in the alignment</description>
        <inlineHelpText>Select the user who should own objects in unassigned territories within this alignment.</inlineHelpText>
        <label>Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Geo_Container__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The TerrAlign container type to be used with the alignment</description>
        <label>Geo Container</label>
        <referenceTo>TAV4__Geo_Container__c</referenceTo>
        <relationshipLabel>Alignments</relationshipLabel>
        <relationshipName>Alignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Identifier_Length__c</fullName>
        <formula>TAV4__Geo_Container__r.TAV4__Identifier_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set automatically when the sales teams assigned to the alignment are modified. Checked when the sales team hierarchy is valid.</description>
        <inlineHelpText>Do not change this field.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAV4__Lead_Lookup_Field__c</fullName>
        <formula>TAV4__Geo_Container__r.TAV4__Lead_Lookup_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Lookup Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Lead_Sharing_Access__c</fullName>
        <description>Lead access granted to shares for territory members in this alignment</description>
        <inlineHelpText>Lead access granted to shares for territory members in this alignment</inlineHelpText>
        <label>Lead Sharing Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAV4__Opportunity_Sharing_Access__c</fullName>
        <description>The Opportunity sharing level assigned to Account sharing rules for territories in the alignment.</description>
        <label>Opportunity Sharing Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alignment</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <columns>NAME</columns>
        <columns>TAV4__Area_Count__c</columns>
        <columns>TAV4__Geo_Container__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TAV4__Account_Lookup_Field__c</columns>
        <columns>TAV4__Lead_Lookup_Field__c</columns>
        <columns>TAV4__Identifier_Length__c</columns>
        <columns>TAV4__Assignment_Priority__c</columns>
        <columns>TAV4__Is_Valid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>